[project]
name = "vm-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "Slava Kovalchuk",email = "Slava24122003@MAIL.RU"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg (>=0.30.0,<0.31.0)",
    "asyncio (>=3.4.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
